--- a/src/pages/work/story.astro
+++ b/src/pages/work/story.astro
@@ -15,7 +15,7 @@ import PhotoCard from "../../components/PhotoCard.astro";
     > curriculum to make a career switch. At the time, I was working as a product
     engineer, wearing many different hats. However, throughout the years I became
     conflicted by the lack of technical challeges of my position. Inspired by the
-    stranger's story, I thought I'd give freecodecamp a try as well!
+    story, I thought I'd give freecodecamp a try as well!
     <br />
     <br />
     It was not exactly love at first sight, but by the time I made it to the <code
@@ -50,7 +50,7 @@ import PhotoCard from "../../components/PhotoCard.astro";
     <PhotoCard
       title='Remote "Work" from Pai'
       imgSrc="/work/story/hanoi/2.jpg"
-      imageAlt="hanoi"
+      imageAlt="pai"
     >
       <p>
         I was probably building my very first full stack SPA: a recipe app. The
@@ -105,7 +105,7 @@ import PhotoCard from "../../components/PhotoCard.astro";
         imageAlt="profile pic"
       >
         <p>
-          Jared Leto is not wrong, the coworking space life is much better than
+          Jared Leto is not wrong, the coworking life is much better than
           cubicles.
         </p>
       </PhotoCard>
@@ -115,7 +115,7 @@ import PhotoCard from "../../components/PhotoCard.astro";
         imageAlt="profile pic"
       >
         <p>
-          I didn't make their website, but it'll be difficult to top this
+          I didn't make the <code>Meet the Team</code> page, but it'll be difficult to top this
           LinkedIn profile photo.
         </p>
       </PhotoCard>
@@ -124,5 +124,10 @@ import PhotoCard from "../../components/PhotoCard.astro";
       At the height of COVID the pandemic, I realized it was time to come back
       home to Toronto, Canada. I am currently writing the next chapters here.
     </p>
+    <img
+      class="object-contain my-6 shadow-xl rounded-2xl"
+      src="/work/story/toronto.jpg"
+      alt="Toronto"
+    />
   </div>
 </Layout>
