--- a/src/components/CodingWrapped.astro
+++ b/src/components/CodingWrapped.astro
@@ -61,6 +61,16 @@ try {
       <div class="w-96 py-4 bg-base-400 m-4">
         <Coding client:visible dataSet={dataSet} topN={7} />
       </div>
+      <small>
+        Powered by{" "}
+        <a target="_blank" href="https://wakatime.com/">
+          Wakatime
+        </a>
+        and
+        <a href="https://github.com/mtanzim/guac" target="_blank">
+          Guac
+        </a>
+      </small>
     </div>
   )
 }
