--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,9 +19,10 @@ const { title } = Astro.props;
   </head>
   <body>
     <Navigation />
-    <div class="container mx-auto px-4">
+    <div class="container mx-auto px-4 mb-24">
       <slot />
     </div>
     <Footer />
   </body>
 </html>
+
