fix link to image

--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -113,7 +113,7 @@ const tiles: Tile[] = [
     company: "",
     title: "My story",
     desc: "Learn more about my story",
-    imageSrc: "tanzim.jpg",
+    imageSrc: "/tanzim.jpg",
     link: "/work/story",
     type: "misc",
     internal: true,
