--- a/src/pages/work/story.astro
+++ b/src/pages/work/story.astro
@@ -44,7 +44,7 @@ import PhotoCard from "../../components/PhotoCard.astro";
       <p>
         Google translate is great at translating documentation! I had worked on
         a blog project with these guys, and it helped me realize how little
-        React and Javascript I knew at the time
+        React and Javascript I knew at the time.
       </p>
     </PhotoCard>
     <PhotoCard
@@ -97,7 +97,7 @@ import PhotoCard from "../../components/PhotoCard.astro";
         imgSrc="/work/story/berlin/1.jpg"
         imageAlt="brandenburg tor"
       >
-        <p>The weird and fantastic city of Berlin</p>
+        <p>The weird and fantastic city of Berlin.</p>
       </PhotoCard>
       <PhotoCard
         title="My first office space in Mindspace, Berlin"
