--- a/src/components/CodingWrapped.astro
+++ b/src/components/CodingWrapped.astro
@@ -57,7 +57,7 @@ try {
 {
   dataSet && (
     <div class="flex flex-col p-4">
-      <h1 class="text-2xl my-4">Recent tools of the trade</h1>
+      <h1 class="text-2xl my-4">I'm recently reading and writing in</h1>
       <div class="w-96 py-4 bg-base-400 m-4">
         <Coding client:visible dataSet={dataSet} topN={7} />
       </div>
