--- a/src/layouts/ResumeLayout.astro
+++ b/src/layouts/ResumeLayout.astro
@@ -11,7 +11,7 @@ export interface Props {
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/jpg" href="/tanzim.jpg" />
     <meta name="generator" content={Astro.generator} />
     <title>Resume</title>
   </head>
