--- a/src/layouts/ResumeLayout.astro
+++ b/src/layouts/ResumeLayout.astro
@@ -18,6 +18,11 @@ export interface Props {
   <body>
     <Navigation />
     <div class="container mx-auto pt-12 pb-24">
+      <button class="btn btn-info my-4">
+        <a href="/work/resume.pdf" download>
+          <img class="w-6 h-6" src="/icons/download.svg" />
+        </a>
+      </button>
       <article class="prose prose-sm">
         <slot />
       </article>
