--- a/src/layouts/ResumeLayout.astro
+++ b/src/layouts/ResumeLayout.astro
@@ -11,13 +11,18 @@ export interface Props {
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/jpg" href="/tanzim.jpg" />
     <meta name="generator" content={Astro.generator} />
     <title>Resume</title>
   </head>
   <body>
     <Navigation />
     <div class="container mx-auto pt-12 pb-24">
+      <button class="btn btn-info my-4">
+        <a href="/work/resume.pdf" download>
+          <img class="w-6 h-6" src="/icons/download.svg" />
+        </a>
+      </button>
       <article class="prose prose-sm">
         <slot />
       </article>
