--- a/src/layouts/ResumeLayout.astro
+++ b/src/layouts/ResumeLayout.astro
@@ -17,7 +17,7 @@ export interface Props {
   </head>
   <body>
     <Navigation />
-    <div class="container mx-auto pt-12 pb-24">
+    <div class="container mx-8 md:mx-auto pb-24">
       <button class="btn btn-info my-4">
         <a href="/work/resume.pdf" download>
           <img class="w-6 h-6" src="/icons/download.svg" />
