--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,11 @@ import Layout from "../layouts/Layout.astro";
         <h1 class="text-5xl font-bold">Hi, I'm Tanzim!</h1>
         <p class="py-6">
           I'm a curious and passionate software engineer from Toronto, Canada.
+          Learn about my <a class="badge badge-primary" href={"/work"}>work</a> and
+          <a class="badge badge-secondary" href={"/play"}>play</a>, or browse
+          through some of my <a class="badge badge-secondary" href={"/blog"}
+            >thoughts</a
+          >.
         </p>
       </div>
     </div>
