--- a/src/components/CodingStats/CodingWrapped.astro
+++ b/src/components/CodingStats/CodingWrapped.astro
@@ -1,5 +1,5 @@
 ---
-import Coding from "../components/Coding.jsx";
+import Coding from "./Coding";
 
 const baseURL = import.meta.env.GUAC_URL;
 let authHeader: undefined | { Authorization: string };
