--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -1,5 +1,5 @@
 ---
-import Genres from "../../components/Genres.svelte";
+import Genres from "../../components/MusicGenres/Genres.svelte";
 import Layout from "../../layouts/Layout.astro";
 import json from "./spotify-artists.json";
 import type { SpotifyArtists } from "../../types/spotify-artists";
