remove padding from hero on home page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Home">
-  <div class="hero g-base py-12">
+  <div class="hero g-base">
     <div class="hero-content flex-col lg:flex-row">
       <img src="/tanzim.jpg" class="max-w-sm rounded-lg shadow-2xl" />
       <div class="divider lg:divider-horizontal"></div>
