--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../../layouts/Layout.astro";
-import CodingWrapped from "../../components/CodingWrapped.astro";
+import CodingWrapped from "../../components/CodingStats/CodingWrapped.astro";
 
 type TileType = "current" | "past" | "study" | "side" | "background";
 interface Tile {
@@ -211,5 +211,13 @@ const tiles: Tile[] = [
       ))
     }
   </div>
-  <CodingWrapped />
+  {
+    import.meta.env.MODE === "development" ? (
+      <p class="text-9xl">
+        Guac will go here but lets not blow up my cheap serverless setup
+      </p>
+    ) : (
+      <CodingWrapped />
+    )
+  }
 </Layout>
