--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -11,7 +11,7 @@ import UnderConstruction from "../../components/UnderConstruction.astro";
 // TODO: move this to a dynamic location/api
 const TopAlbumImgs: CarouselImage[] = [
   {
-    url: "public/albums/midnights.jpeg",
+    url: "/albums/midnights.jpeg",
     alt: "Taylor Swift - Midnights",
   },
   {
@@ -20,7 +20,7 @@ const TopAlbumImgs: CarouselImage[] = [
   },
 
   {
-    url: "public/albums/asphalt-meadows.webp",
+    url: "/albums/asphalt-meadows.webp",
     alt: "Death Cab for Cutie - Asphalt Meadows",
   },
 ];
