improve bookmarks on work section

--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -27,6 +27,7 @@ const TopAlbumImgs: CarouselImage[] = [
 ---
 
 <Layout title="Play">
+  <h1 class="text-4xl mb-4">Play</h1>
   <p class="text-base">
     When not working, a few things I keep busy with are <a
       class="badge badge-primary"
