--- a/src/pages/work/story.astro
+++ b/src/pages/work/story.astro
@@ -4,7 +4,7 @@ import PhotoCard from "../../components/PhotoCard.astro";
 ---
 
 <Layout title="My story">
-  <h1 class="text-2xl mb-4">My story</h1>
+  <h1 class="text-4xl mb-4">My story</h1>
   <p class="text-base">
     I stumbled on web development by coincidence. I was chatting with a stranger
     at a party, and they mentioned they were going through the
@@ -35,7 +35,7 @@ import PhotoCard from "../../components/PhotoCard.astro";
     pictures:
   </p>
   <!-- TODO: make these components -->
-  <div class="flex mb-4 flex-wrap my-6">
+  <div class="flex mb-4 flex-wrap my-6 justify-center">
     <PhotoCard
       title="Freecodecamp meetup Hanoi"
       imgSrc="/work/story/hanoi/1.jpg"
