--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,19 +5,19 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="Home">
   <div class="hero g-base">
     <div class="hero-content flex-col lg:flex-row">
-      <img src="/tanzim.jpg" class="max-w-sm rounded-lg shadow-2xl" />
-      <div class="divider lg:divider-horizontal"></div>
       <div>
         <h1 class="text-5xl font-bold">Hi, I'm Tanzim!</h1>
         <p class="py-6">
           I'm a curious and passionate software engineer from Toronto, Canada.
           Learn about my <a class="badge badge-primary" href={"/work"}>work</a> and
           <a class="badge badge-secondary" href={"/play"}>play</a>, or browse
-          through some of my <a class="badge badge-secondary" href={"/blog"}
+          through some of my <a class="badge badge-info" href={"/blog"}
             >thoughts</a
           >.
         </p>
       </div>
+      <div class="divider lg:divider-horizontal"></div>
+      <img src="/tanzim.jpg" class="max-w-sm rounded-lg shadow-2xl" />
     </div>
   </div>
 </Layout>
