--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -29,7 +29,7 @@ const TopAlbumImgs: CarouselImage[] = [
 <Layout title="Play">
   <h1 class="text-4xl mb-4">Play</h1>
   <p class="text-base">
-    When not working, a few things I keep busy with are <a
+    My interests outside work include <a
       class="badge badge-primary"
       href="#music">music</a
     >, <a class="badge badge-secondary" href="#travel">travel</a>, fitness, and <a
