--- a/src/pages/work/story.astro
+++ b/src/pages/work/story.astro
@@ -35,7 +35,7 @@ import PhotoCard from "../../components/PhotoCard.astro";
     pictures:
   </p>
   <!-- TODO: make these components -->
-  <div class="flex mb-4 flex-wrap my-6 justify-center">
+  <div class="flex mb-4 flex-wrap my-6">
     <PhotoCard
       title="Freecodecamp meetup Hanoi"
       imgSrc="/work/story/hanoi/1.jpg"
